--- a/TrainingCurriculum/index.html
+++ b/TrainingCurriculum/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <!--<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />-->
-    <link href="./css/bootstrap.min.css" rel="stylesheet" />
-    <link href="./css/fonts.css" rel="stylesheet" />
-    <link href="./css/app.css" rel="stylesheet" />
-    <link href="./css/jquery-ui.min.css" rel="stylesheet" />
+    <link href="./Styles/bootstrap.min.css" rel="stylesheet" />
+    <link href="./Styles/fonts.css" rel="stylesheet" />
+    <link href="./Styles/app.css" rel="stylesheet" />
+    <link href="./Styles/jquery-ui.min.css" rel="stylesheet" />
 </head>
 <body>
     <div class="container-fluid">
@@ -27,11 +27,11 @@
     <div preloader></div>
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>-->
-    <script src="./js/jquery.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/angular.min.js"></script>
-    <script src="./js/angular-route.js"></script>
-    <script src="./js/app.js"></script>
-    <script src="./js/jquery-ui.min.js"></script>
+    <script src="./Scripts/jquery.min.js"></script>
+    <script src="./Scripts/bootstrap.min.js"></script>
+    <script src="./Scripts/angular.min.js"></script>
+    <script src="./Scripts/angular-route.js"></script>
+    <script src="./Scripts/app.js"></script>
+    <script src="./Scripts/jquery-ui.min.js"></script>
 </body>
 </html>
