--- a/TrainingCurriculum/login.html
+++ b/TrainingCurriculum/login.html
@@ -5,7 +5,7 @@
     </div>
     <div class="form-group">
         <label for="password">Password:</label>
-        <input class="form-control" id="password" maxlength="100" name="password" ng-model="account.password" required="required" type="password" />
+        <input class="form-control" id="password" maxlength="100" name="password" ng-model="account.password" type="password" />
     </div>
     <button class="btn btn-default" id="submit" type="submit" ng-click="submit(account)">Login</button>
 </form>
